fix episode name alignment

--- a/starwars/style.css
+++ b/starwars/style.css
@@ -44,3 +44,7 @@ body {
     background-image: linear-gradient(0deg, transparent, black 75%);
     z-index: 1;
   }
+
+  .episodeName {
+      text-align: center;
+  }
